--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,8 @@ body {
   margin-left: auto;
   margin-right: auto;
   width: 1200px;
+  padding-left: 20px;
+  padding-right: 20px;
   outline: 2px solid tomato;
 }
 
@@ -96,6 +98,8 @@ background-color: #ccc;
 /* section and team */
 .section-title,
 .teams-title {
+  margin-top: 0;
+  margin-bottom: 50px;
   color: var(--title-text-color);
   font-weight: 700;
   font-size: 36px;
@@ -103,28 +107,57 @@ background-color: #ccc;
   text-align: center;
 }
 /* team */
-.team {
+.section.team {
   background-color: var(--background-grey);
 }
 .team-title {
+  /* margin-top: 30px;
+  margin-bottom: 0; */
+
+
   color: var(--title-text-color);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
 }
 .team-dsr {
+  /* margin-top: 10px;
+  margin-bottom: 30px; */
+
   font-size: 16px;
   line-height: 1.19;
 }
 /* features */
+.feature-list {
+  padding-top: 94px;
+}
 .feature-list .title {
+  margin-top: 0px;
+  margin-bottom: 10px;
+
   color: var(--title-text-color);
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-}
+
+ }
+ .feature-list p {
+   margin-top: 0;
+   margin-bottom: 0;
+ }
+
+ .section {
+   padding-top: 94px;
+   padding-bottom: 94px;
+   
+ }
+
+ 
+
+
+
 
 /* button */
 .btn-primary {
