--- a/css/styles.css
+++ b/css/styles.css
@@ -25,27 +25,37 @@ body {
   letter-spacing: 0.03em;
 }
 
+/* utilites */
+.list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
 .container {
   margin-left: auto;
   margin-right: auto;
   width: 1200px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 15px;
+  padding-right: 15px;
   outline: 2px solid tomato;
 }
 
 /* page header */
 
 .page-header {
-background-color: #ccc;
-
+background-color: var (var(--white-color));
 }
+
 /* logo */
 .contacts .link:hover,
 .contacts .link:focus {
   color: var(--accent-color);
 }
+
 .gen-logo {
+  
+
   color: var(--accent-color);
   text-decoration: none;
   font-family: Raleway; sans-serif;
@@ -53,18 +63,42 @@ background-color: #ccc;
   font-size: 26px;
   line-height: 1.19;
 }
-
 .logo2 {
   color: var(--title-text-color);
 }
 .logo3 {
   color: var(--white-color);
 }
+
+ .main-nav {
+  display: flex;
+  align-items: center;
+} 
+.navigation {
+  display:flex;
+  align-items: center;
+  
+}
+
+
 /* site nav */
+.site-nav {
+  display: flex;
+  margin-left: 93px;
+}
+
+.site-nav .nav-item + .nav-item{
+  margin-left: 50px;
+}
+
 .site-nav .link.current {
   color: var(--accent-color);
 }
 .site-nav .link {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+
   color: var(--title-text-color);
   font-weight: 500;
   font-size: 14px;
@@ -72,10 +106,12 @@ background-color: #ccc;
   letter-spacing: 0.02em;
   text-decoration: none;
 }
+
 .site-nav .link:hover,
 .site-nav .link:focus {
   color: var(--accent-color);
 }
+
 /* hero */
 .hero {
   text-align: center;
@@ -92,9 +128,27 @@ background-color: #ccc;
   line-height: 1.36;
   
   letter-spacing: 0.06em;
-
-  
 }
+
+
+/* feature list */
+.features {
+  display: flex;
+  
+ }
+.features .feature-item {
+  width: 270px;
+  background-color: tomato;
+}
+
+.images {
+  display:flex;
+}
+.cadres{
+  display: flex;
+}
+
+
 /* section and team */
 .section-title,
 .teams-title {
@@ -143,10 +197,10 @@ background-color: #ccc;
   text-transform: uppercase;
 
  }
- .feature-list p {
+ /* .feature-list p {
    margin-top: 0;
    margin-bottom: 0;
- }
+ } */
 
  .section {
    padding-top: 94px;
@@ -181,7 +235,21 @@ background-color: #ccc;
   background-color: var(--background-dark);
 }
 /* contacts */
+.contacts {
+display: flex;
+margin-left:auto;
+
+}
+.contacts .contact-item + .contact-item{
+  margin-left: 50px;
+}
+
 .contacts .link {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  
+
   color: var(--primary-text-color);
   font-weight: 500;
   font-size: 14px;
@@ -193,21 +261,59 @@ background-color: #ccc;
 .contacts .link:focus {
   color: var(--accent-color);
 }
+
+
+
+
+
 /* portfolio */
 .filter .link {
+  display: inline-block;
+  padding: 6px 22px;
+  border-radius: 4px;
+  min-width: 73px;
+  border: 1px solid transparent;
+
   color: var(--title-text-color);
   background-color: var(--background-grey);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
+  text-align: center;
   cursor: pointer;
+ 
 }
 .filter .link:hover,
 .filter .link:focus {
   color: var(--white-color);
   background-color: var(--accent-color);
 }
+
+.filter {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 34px;
+  }
+.filter .filter-btn + .filter-btn {
+  margin-left: 8px;
+}
+
+/* Items */
+
+.items {
+ display: flex;
+ flex-wrap: wrap;
+}
+.items li {
+  width: 370px;
+  margin-right: 30px;
+}
+
 .items .item {
+  margin-top: 0;
+  margin-bottom: 0;
+
+
   color: var(--title-text-color);
   font-weight: 700;
   font-size: 18px;
@@ -215,6 +321,8 @@ background-color: #ccc;
   letter-spacing: 0.06em;
 }
 .items .item-text {
+  margin-top: 0;
+  margin-bottom: 0;
   font-size: 16px;
   line-height: 1.87;
 }
@@ -235,9 +343,4 @@ background-color: #ccc;
   color: var(--white-color);
   font-size: 14px;
   line-height: 1.71;
-}
-.list {
-  padding: 0;
-  margin: 0;
-  list-style: none;
 }
