--- a/css/styles.css
+++ b/css/styles.css
@@ -138,14 +138,30 @@ background-color: var (var(--white-color));
  }
 .features .feature-item {
   width: 270px;
-  background-color: tomato;
+  margin-right: 30px;
+  
 }
 
-.images {
+.features .feature-item:nth-child(4n){
+  margin-right: 0;
+  }
+
+.images-do {
   display:flex;
 }
-.cadres{
+
+.images-do .image-do + .image-do {
+  margin-left: 30px;
+}
+
+.cadres {
   display: flex;
+  }
+.our-cadres {
+  width: 270px;
+}
+.cadres .our-cadres + .our-cadres {
+  margin-left: 30px;
 }
 
 
@@ -154,7 +170,9 @@ background-color: var (var(--white-color));
 .teams-title {
   margin-top: 0;
   margin-bottom: 50px;
+
   color: var(--title-text-color);
+
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
@@ -165,8 +183,9 @@ background-color: var (var(--white-color));
   background-color: var(--background-grey);
 }
 .team-title {
-  /* margin-top: 30px;
-  margin-bottom: 0; */
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 0; 
 
 
   color: var(--title-text-color);
@@ -175,11 +194,12 @@ background-color: var (var(--white-color));
   line-height: 1.19;
 }
 .team-dsr {
-  /* margin-top: 10px;
-  margin-bottom: 30px; */
+  margin-top: 10px;
+  margin-bottom: 30px; 
 
   font-size: 16px;
   line-height: 1.19;
+  text-align: center;
 }
 /* features */
 .feature-list {
@@ -197,10 +217,14 @@ background-color: var (var(--white-color));
   text-transform: uppercase;
 
  }
- /* .feature-list p {
+  .feature-item .title {
+    margin-top: 0;
+    margin-bottom: 10px;
+ } 
+ .feature-item p {
    margin-top: 0;
    margin-bottom: 0;
- } */
+ }
 
  .section {
    padding-top: 94px;
@@ -304,14 +328,22 @@ margin-left:auto;
  display: flex;
  flex-wrap: wrap;
 }
-.items li {
+.items .banners {
   width: 370px;
   margin-right: 30px;
+  margin-bottom: 30px;
 }
+.items .banners:nth-child(3n){
+  margin-right: 0;
+  }
+.item .banners:last-child(- n + 3) {
+  margin-bottom: 0;
+}  
 
 .items .item {
-  margin-top: 0;
+  margin-top: 20px;
   margin-bottom: 0;
+  margin-left: 24px;
 
 
   color: var(--title-text-color);
@@ -321,12 +353,17 @@ margin-left:auto;
   letter-spacing: 0.06em;
 }
 .items .item-text {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin-top: 4px;
+  margin-bottom: 20px;
+  margin-left: 24px;
+  
   font-size: 16px;
   line-height: 1.87;
 }
 .detail .link {
+  display: flex;
+  margin-top: 9px;
+  
   font-style: normal;
   font-size: 14px;
   line-height: 1.71;
@@ -338,9 +375,25 @@ margin-left:auto;
 .detail .link:focus {
   color: var(--accent-color);
 }
+.detail .link:last-child(2n) {
+  margin-bottom: 60px;
+}
 .address {
+  margin-top: 20px;
+  margin-bottom: 0;
+
+
   font-style: normal;
   color: var(--white-color);
   font-size: 14px;
   line-height: 1.71;
+}
+
+.main-footer {
+  display: flex;
+  flex-direction: column;
+}
+
+.main-footer .gen-logo {
+  margin-top: 60px;
 }
