--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,8 @@
   --background-grey: #f5f4fa;
   --background-dark: #2f303a;
   --transparent-white: rgba(255, 255, 255, 0.6);
+  --header-border: rgba(236, 236, 236, 1);
+  --card-border: #EEEEEE;
 }
 body {
   color: var(--primary-text-color);
@@ -32,19 +34,23 @@ body {
   list-style: none;
 }
 
+img {
+  display: block;
+  }
+
 .container {
   margin-left: auto;
   margin-right: auto;
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
-  outline: 2px solid tomato;
-}
+  }
 
 /* page header */
 
 .page-header {
 background-color: var (var(--white-color));
+border-bottom: 1px solid var(--header-border);
 }
 
 /* logo */
@@ -134,13 +140,12 @@ background-color: var (var(--white-color));
 /* feature list */
 .features {
   display: flex;
-  
  }
+
 .features .feature-item {
   width: 270px;
   margin-right: 30px;
-  
-}
+  }
 
 .features .feature-item:nth-child(4n){
   margin-right: 0;
@@ -156,12 +161,18 @@ background-color: var (var(--white-color));
 
 .cadres {
   display: flex;
-  }
+   }
+
+
 .our-cadres {
   width: 270px;
 }
 .cadres .our-cadres + .our-cadres {
   margin-left: 30px;
+}
+
+.cadres-content {
+  padding-bottom: 30px;
 }
 
 
@@ -195,7 +206,7 @@ background-color: var (var(--white-color));
 }
 .team-dsr {
   margin-top: 10px;
-  margin-bottom: 30px; 
+  margin-bottom: 0px; 
 
   font-size: 16px;
   line-height: 1.19;
@@ -205,6 +216,7 @@ background-color: var (var(--white-color));
 .feature-list {
   padding-top: 94px;
 }
+
 .feature-list .title {
   margin-top: 0px;
   margin-bottom: 10px;
@@ -217,10 +229,7 @@ background-color: var (var(--white-color));
   text-transform: uppercase;
 
  }
-  .feature-item .title {
-    margin-top: 0;
-    margin-bottom: 10px;
- } 
+ 
  .feature-item p {
    margin-top: 0;
    margin-bottom: 0;
@@ -229,14 +238,9 @@ background-color: var (var(--white-color));
  .section {
    padding-top: 94px;
    padding-bottom: 94px;
-   
  }
 
  
-
-
-
-
 /* button */
 .btn-primary {
   display: inline-block;
@@ -245,7 +249,6 @@ background-color: var (var(--white-color));
   padding: 10px 32px;
   min-width: 200px;
     
-
   color: var(--white-color);
   background-color: var(--accent-color);
   font-weight: 700;
@@ -273,7 +276,6 @@ margin-left:auto;
   padding-top: 32px;
   padding-bottom: 32px;
   
-
   color: var(--primary-text-color);
   font-weight: 500;
   font-size: 14px;
@@ -281,13 +283,11 @@ margin-left:auto;
   letter-spacing: 0.02em;
   text-decoration: none;
 }
+
 .contacts .link:hover,
 .contacts .link:focus {
   color: var(--accent-color);
 }
-
-
-
 
 
 /* portfolio */
@@ -296,6 +296,7 @@ margin-left:auto;
   padding: 6px 22px;
   border-radius: 4px;
   min-width: 73px;
+
   border: 1px solid transparent;
 
   color: var(--title-text-color);
@@ -307,6 +308,7 @@ margin-left:auto;
   cursor: pointer;
  
 }
+
 .filter .link:hover,
 .filter .link:focus {
   color: var(--white-color);
@@ -318,6 +320,7 @@ margin-left:auto;
   justify-content: center;
   margin-bottom: 34px;
   }
+
 .filter .filter-btn + .filter-btn {
   margin-left: 8px;
 }
@@ -327,36 +330,43 @@ margin-left:auto;
 .items {
  display: flex;
  flex-wrap: wrap;
-}
-.items .banners {
-  width: 370px;
+ }
+
+.items > .cards {
+  flex-basis: calc(100% / 3 - 30px);
   margin-right: 30px;
   margin-bottom: 30px;
-}
-.items .banners:nth-child(3n){
+  }
+
+.items .cards:nth-child(3n){
   margin-right: 0;
   }
-.item .banners:last-child(- n + 3) {
+
+.items .cards:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }  
 
-.items .item {
-  margin-top: 20px;
+.card-content{
+  padding: 20px 24px ;
+  background: var(--white-color);
+  border: 1px solid var(--card-border);
+  box-sizing: border-box;
+}
+
+.card-content .item {
+  margin-top: 0;
   margin-bottom: 0;
-  margin-left: 24px;
-
-
+  
   color: var(--title-text-color);
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
 }
-.items .item-text {
+.card-content .item-text {
   margin-top: 4px;
-  margin-bottom: 20px;
-  margin-left: 24px;
-  
+  margin-bottom: 0px;
+    
   font-size: 16px;
   line-height: 1.87;
 }
@@ -371,17 +381,19 @@ margin-left:auto;
   color: var(--transparent-white);
   text-decoration: none;
 }
+
 .detail .link:hover,
 .detail .link:focus {
   color: var(--accent-color);
 }
+
 .detail .link:last-child(2n) {
-  margin-bottom: 60px;
+  padding-bottom: 60px;
 }
+
 .address {
   margin-top: 20px;
   margin-bottom: 0;
-
 
   font-style: normal;
   color: var(--white-color);
@@ -392,6 +404,7 @@ margin-left:auto;
 .main-footer {
   display: flex;
   flex-direction: column;
+  padding-bottom: 60px;
 }
 
 .main-footer .gen-logo {
