--- a/css/styles.css
+++ b/css/styles.css
@@ -120,6 +120,8 @@ border-bottom: 1px solid var(--header-border);
 
 /* hero */
 .hero {
+  padding-top: 200px;
+  padding-bottom: 200px;
   text-align: center;
   background-color: var(--background-dark);
 }
@@ -166,12 +168,14 @@ border-bottom: 1px solid var(--header-border);
 
 .our-cadres {
   width: 270px;
+  background-color: var(--background-color);
 }
 .cadres .our-cadres + .our-cadres {
   margin-left: 30px;
 }
 
 .cadres-content {
+  padding-top: 30px;
   padding-bottom: 30px;
 }
 
@@ -195,7 +199,7 @@ border-bottom: 1px solid var(--header-border);
 }
 .team-title {
   text-align: center;
-  margin-top: 30px;
+  margin-top: 0;
   margin-bottom: 0; 
 
 
@@ -318,7 +322,7 @@ margin-left:auto;
 .filter {
   display: flex;
   justify-content: center;
-  margin-bottom: 34px;
+  margin-bottom: 50px;
   }
 
 .filter .filter-btn + .filter-btn {
@@ -349,8 +353,20 @@ margin-left:auto;
 .card-content{
   padding: 20px 24px ;
   background: var(--white-color);
-  border: 1px solid var(--card-border);
   box-sizing: border-box;
+  
+  border-right-width: 1px;
+  border-right-style: solid;
+  border-right-color: var(--card-border);
+  
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: var(--card-border);
+
+  border-left-width: 1px;
+  border-left-style: solid;
+  border-left-color: var(--card-border);
+  
 }
 
 .card-content .item {
@@ -372,8 +388,7 @@ margin-left:auto;
 }
 .detail .link {
   display: flex;
-  margin-top: 9px;
-  
+   
   font-style: normal;
   font-size: 14px;
   line-height: 1.71;
@@ -390,9 +405,12 @@ margin-left:auto;
 .detail .link:last-child(2n) {
   padding-bottom: 60px;
 }
+.detail li {
+margin-top: 9px;
+}
 
 .address {
-  margin-top: 20px;
+  margin-top: 0;
   margin-bottom: 0;
 
   font-style: normal;
@@ -401,12 +419,13 @@ margin-left:auto;
   line-height: 1.71;
 }
 
+.address-footer {
+  margin-top: 20px;
+}
+
 .main-footer {
-  display: flex;
-  flex-direction: column;
+  padding-top: 60px;
   padding-bottom: 60px;
 }
 
-.main-footer .gen-logo {
-  margin-top: 60px;
-}
+
