--- a/css/styles.css
+++ b/css/styles.css
@@ -177,6 +177,8 @@ border-bottom: 1px solid var(--header-border);
 .cadres-content {
   padding-top: 30px;
   padding-bottom: 30px;
+  padding-left: 50px;
+  padding-right: 50px;
 }
 
 
